# zephyr_RTOS_nucleo_l476rg

./: .gitignore  CMakeLists.txt  compile.sh  prj.conf  prj.config  recompile.sh  sample.yaml
board/: nucleo_l476rg.overlay
inc/: fat_fs.h  heartbeat.h  main.h  pwm_led.h
src/: CMakeLists.txt  fat_fs.c  heartbeat.c  main.c  pwm_led.c
